# ArchiAI

./: .env  COLLABORATION_HANDOFF.md  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/: __init__.py
apps/design/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/design/migrations/: 0001_initial.py
apps/health/: __init__.py  apps.py  urls.py  views.py
archi3d/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
bylaws/: default.json  india_delhi.json  india_mumbai.json  usa_nyc.json
knowledge/raw/: .gitkeep  architectural_principles.md  ingested.json  ingested_quick_test.json
knowledge/source_configs/: sources.sample.json
outputs/: .gitkeep
scripts/: ingest_knowledge.py  scrape_knowledge_sources.py
services/: __init__.py  bylaw_loader.py  explanation_builder.py  geometry_builder.py  geometry_validator.py  hypar_bridge.py  hypar_client.py  input_parser.py  knowledge_ingestion.py  layout_generator.py  pipeline.py  rule_engine.py  safe_web_scraper.py  vastu_rules.py  vectorless_rag.py
tests/: test_design_api.py  test_knowledge_ingestion_and_scraper.py  test_pipeline_services.py  test_rule_engine.py
